--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,18 +2,22 @@ version: 2
 
 models:
   - name: stg_customers
+    description: one unique customer per row
     columns: 
       - name: customer_id
+        description: primary key
         tests:
           - unique
           - not_null
   - name: stg_orders
     columns:
       - name: order_id
+        description: primary key
         tests:
           - unique
           - not_null
       - name: status
+        description: '{{ doc("order_status") }}'
         tests:
           - accepted_values:
               values:
